fix(OMN-325): Enhance I/O audit with security fixes and optimizations
Bug Fixes:
- Fix pathlib false positive detection: Only flag violations when pathlib
  is imported AND method is called on likely Path object (heuristic-based)
- Fix whitelist pattern matching security: Prevent unintended matches like
  "bad_node.py" matching "my_bad_node.py" or "bad_node.py.backup"

Enhancements:
- Add detection for os.environ mutations: pop(), setdefault(), clear(), update()
- Implement alias-based import tracking: Detect violations like
  `import httpx as h; h.get(url)`

Optimizations:
- Eliminate redundant file reads in run_audit() by returning source_lines
  from audit_file() (single read per file)

Documentation:
- Document inline pragma limitation (requires YAML whitelist entry first)
- Update CLAUDE.md with I/O audit usage guide
- Add clarifying comments to whitelist YAML

Test Coverage:
- 67 tests (up from 45)
- +7 pathlib false positive prevention tests
- +8 whitelist security tests
- +4 os.environ mutation tests
- +3 alias detection tests

--- a/tests/audit/io_audit_whitelist.yaml
+++ b/tests/audit/io_audit_whitelist.yaml
@@ -4,6 +4,21 @@
 # This file defines exceptions to the I/O audit rules for ONEX nodes.
 # All exceptions must have a documented reason.
 #
+# ============================================================================
+# IMPORTANT: Inline Pragma Requirement
+# ============================================================================
+# Inline pragmas (# io-audit: ignore-next-line <rule>) ONLY work for files
+# that are listed in this YAML whitelist. This is BY DESIGN.
+#
+# If you add a pragma to a file NOT listed here, it will be SILENTLY IGNORED.
+#
+# Correct workflow:
+#   1. Add the file to this YAML whitelist with allowed_rules
+#   2. Then use inline pragmas in that file for line-level granularity
+#
+# This ensures all I/O exceptions are centrally tracked and code-reviewed.
+# ============================================================================
+#
 # Rule IDs:
 #   - net-client: Network/DB/external client imports
 #   - env-access: Environment variable access
@@ -15,11 +30,23 @@
 #       reason: "Why this exception is needed"
 #       allowed_rules:
 #         - "rule-id"
+#
+# Example with inline pragma usage:
+#   1. Add entry here:
+#      - path: "src/omniintelligence/nodes/my_effect_node.py"
+#        reason: "Effect node requires Kafka"
+#        allowed_rules:
+#          - "net-client"
+#
+#   2. In my_effect_node.py, use pragma for specific lines:
+#      # io-audit: ignore-next-line net-client
+#      from confluent_kafka import Producer
 
 schema_version: "1.0.0"
 
 files:
   # Test fixtures are whitelisted for testing purposes
+  # Note: Inline pragmas work in this file because it's listed here
   - path: "tests/audit/fixtures/io/whitelisted_node.py"
     reason: "Test fixture for whitelist functionality"
     allowed_rules:
