fix: address all PR #10 review issues for release readiness
Docker/Infrastructure:
- Fix Valkey password exposure by using entrypoint script injection
- Fix sed substitution vulnerability with awk for safe password handling
- Fix network definition conflicts with external: true pattern

Contract YAML:
- Add GitHub issue tracking to all TODO placeholders (#13-19)
- Verify error_code fields and compute_node references

Node Implementation:
- Fix analyze_code() output to use canonical ModelIntelligenceOutput fields
- Fix example_usage.py stats access for missing keys

Model Type Safety:
- Create IntelligenceOptionsDict, IntelligenceMetadataDict, PerformanceContextDict
- Replace dict[str, Any] with typed structures in model_intelligence_input.py

Legacy Code:
- Create EventPublisher with proper circuit breaker separation
- Add events module to _legacy exports

pyproject.toml:
- Replace 41 duplicated dependencies with PEP 735 include-group composition

Documentation:
- Fix test path references (versioned to flat structure)
- Fix node naming conventions (kafka_event_effect to ingestion_effect)
- Update 4 migration docs with consistent naming

Utilities:
- Improve relationship_count auto-compute pattern to match entity_count

--- a/deployment/docker/docker-compose.nodes.yml
+++ b/deployment/docker/docker-compose.nodes.yml
@@ -305,23 +305,25 @@ services:
 # Mode 1: Combined Deployment (RECOMMENDED)
 #   docker compose -f docker-compose.yml -f docker-compose.nodes.yml up -d
 #   - Files are merged, network definition comes from base docker-compose.yml
+#   - The external: true is overridden by the bridge definition in base file
 #   - Services communicate via container names (postgres, qdrant, etc.)
 #
 # Mode 2: Standalone Node Deployment (requires base infra running first)
 #   Step 1: docker compose -f docker-compose.yml up -d  # Start infrastructure
 #   Step 2: docker compose -f docker-compose.nodes.yml up -d  # Start nodes
 #   - Network already exists from Step 1 (omniintelligence_omni-network)
+#   - external: true tells Compose to use the existing network
 #
-# IMPORTANT: This file intentionally does NOT define the network to avoid
-# Docker Compose merge conflicts. When multiple compose files are used with
-# -f flags, network definitions are merged and external: true would override
-# the bridge network definition from docker-compose.yml, causing deployment
-# failure. The network reference below uses external: true which works when
-# the base infrastructure is already running.
+# HOW THIS WORKS:
+#   - Mode 1: When merging compose files, Docker Compose takes the more
+#     specific network definition (bridge with subnet) from docker-compose.yml
+#     and ignores the external reference here.
+#   - Mode 2: When running standalone, external: true finds the existing
+#     network created by the base infrastructure compose file.
 #
 # Network Architecture:
 #   - omni-network: Internal bridge network (172.28.0.0/16)
-#   - Defined in docker-compose.yml, referenced here as external
+#   - Defined in docker-compose.yml as bridge with custom subnet
 #   - All nodes and infrastructure share this network
 #   - Container DNS resolution for service discovery
 #
@@ -332,8 +334,9 @@ services:
 # =============================================================================
 
 networks:
-  # Network is defined in docker-compose.yml as a bridge network (172.28.0.0/16)
-  # When running Mode 1 (merged files), the base definition takes precedence
-  # When running Mode 2 (standalone), this external reference is used
+  # Network reference for node services
+  # - Mode 1 (merged): Base compose bridge definition takes precedence
+  # - Mode 2 (standalone): Uses external network from base infrastructure
   omni-network:
     name: omniintelligence_omni-network
+    external: true
