--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -193,12 +193,22 @@ services:
     container_name: omni-valkey
     ports:
       - "${VALKEY_PORT:-6379}:6379"
-    command: valkey-server --requirepass ${VALKEY_PASSWORD:?VALKEY_PASSWORD must be set} --maxmemory 512mb
-      --maxmemory-policy allkeys-lru --save 60 1000
+    # ========================================================================
+    # Security Note: Password NOT passed via command line
+    # ========================================================================
+    # The entrypoint script injects the password into a config file at runtime.
+    # This prevents the password from appearing in `ps aux` or `docker inspect`.
+    # See: valkey-entrypoint.sh and valkey.conf.template
+    # ========================================================================
+    entrypoint: ["/entrypoint.sh"]
     volumes:
       - valkey_data:/data
+      - ./valkey-entrypoint.sh:/entrypoint.sh:ro
+      - ./valkey.conf.template:/etc/valkey/valkey.conf.template:ro
     environment:
-      # Used by valkey-cli for authentication without exposing password in process listing
+      # Password passed via environment variable (not visible in command line)
+      VALKEY_PASSWORD: ${VALKEY_PASSWORD:?VALKEY_PASSWORD must be set}
+      # Used by valkey-cli for authentication in healthcheck
       REDISCLI_AUTH: ${VALKEY_PASSWORD:?VALKEY_PASSWORD must be set}
     networks:
       - omni-network
