--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,52 +174,11 @@ core = [
 ]
 
 # All dependencies for development and testing
-# Version constraints aligned with [tool.poetry.group.core.dependencies] caret syntax
-# Note: omnibase-infra 0.2.1 requires omnibase-core>=0.8.0
+# Uses include-group (PEP 735) to compose from core and dev groups
+# This eliminates duplication and prevents version drift between groups
 all = [
-    # Include all core dependencies (version bounds match Poetry caret syntax)
-    "omnibase-core>=0.8.0,<0.9.0",
-    "omnibase-spi>=0.5.0,<0.6.0",
-    "omnibase-infra>=0.2.1,<0.3.0",
-    "fastapi>=0.104.0",
-    "uvicorn>=0.24.0",
-    "python-multipart>=0.0.20",
-    "aiokafka>=0.10.0",
-    "confluent-kafka>=2.6.0",
-    "qdrant-client>=1.15.1",
-    "neo4j>=5.28.2",
-    "asyncpg>=0.29.0",
-    "pypdf2>=3.0.1",
-    "pdfplumber>=0.11.6",
-    "python-docx>=1.1.2",
-    "markdown>=3.8",
-    "openai>=1.71.0",
-    "llama-index>=0.12.0",
-    "sentence-transformers>=4.1.0",
-    "torch>=2.0.0",
-    "transformers>=4.30.0",
-    "tenacity>=8.2.0",
-    "cachetools>=5.3.0",
-    "redis[hiredis]>=5.0.0",
-    "logfire>=0.30.0",
-    "structlog>=23.1.0",
-    "prometheus-client>=0.19.0",
-    "psutil>=5.9.0",
-    # Dev/test dependencies (versions aligned with [dependency-groups].dev)
-    "mypy>=1.17.0",
-    "types-PyYAML>=6.0.0",
-    "pytest>=8.0.0",
-    "pytest-asyncio>=0.24.0",
-    "pytest-mock>=3.12.0",
-    "pytest-timeout>=2.3.0",
-    "pytest-cov>=6.2.1",
-    "pytest-xdist>=3.5.0",
-    "black>=24.10.0",
-    "isort>=5.13.0",
-    "ruff>=0.12.5",
-    "requests>=2.31.0",
-    "factory-boy>=3.3.0",
-    "pre-commit>=4.5.0",
+    {include-group = "core"},
+    {include-group = "dev"},
 ]
 
 [tool.ruff]
