--- a/src/omniintelligence/nodes/intelligence_adapter/contract.yaml
+++ b/src/omniintelligence/nodes/intelligence_adapter/contract.yaml
@@ -5,8 +5,12 @@
 # Consumes CODE_ANALYSIS_REQUESTED events and publishes completion/failure events.
 # =============================================================================
 #
-# TODO(v2.0): Consider splitting this adapter into smaller, focused adapters
-# -------------------------------------------------------------------------
+# =============================================================================
+# TODO(#16): Consider splitting this adapter into smaller, focused adapters
+# =============================================================================
+# Status: Future consideration (v2.0) - current implementation is functional
+# Issue: https://github.com/OmniNode-ai/omniintelligence/issues/16
+#
 # This adapter currently handles multiple responsibilities (quality assessment,
 # pattern detection, performance analysis). For better single-responsibility
 # adherence, consider decomposing into:
@@ -15,7 +19,6 @@
 #   - performance_adapter: Performance analysis and optimization
 #
 # See ARCHITECTURE.md in this directory for detailed analysis and tradeoffs.
-# Status: Future consideration - current implementation is functional.
 # =============================================================================
 contract_version:
   major: 1
@@ -48,7 +51,8 @@ output_model:
 # implementation (node_intelligence_adapter_effect.py). These provide type
 # compatibility during development.
 #
-# TODO: Migrate event payload models to canonical location:
+# TODO(#17): Migrate event payload models to canonical location
+# Issue: https://github.com/OmniNode-ai/omniintelligence/issues/17
 #   - Target module: omniintelligence.events.models
 #   - Models to migrate: ModelCodeAnalysisRequestPayload,
 #     ModelCodeAnalysisCompletedPayload, ModelCodeAnalysisFailedPayload
@@ -58,7 +62,7 @@ consumed_events:
   - topic: "{env}.archon-intelligence.intelligence.code-analysis-requested.v1"
     event_type: "CodeAnalysisRequested"
     payload_model: "ModelCodeAnalysisRequestPayload"
-    # TODO: Update to "omniintelligence.events.models" after migration
+    # TODO(#17): Update to "omniintelligence.events.models" after migration
     payload_module: "omniintelligence.nodes.intelligence_adapter.node_intelligence_adapter_effect"
     description: "Code analysis request from external services"
 # Published Events
@@ -67,13 +71,13 @@ published_events:
   - topic: "{env}.archon-intelligence.intelligence.code-analysis-completed.v1"
     event_type: "CodeAnalysisCompleted"
     payload_model: "ModelCodeAnalysisCompletedPayload"
-    # TODO: Update to "omniintelligence.events.models" after migration
+    # TODO(#17): Update to "omniintelligence.events.models" after migration
     payload_module: "omniintelligence.nodes.intelligence_adapter.node_intelligence_adapter_effect"
     description: "Code analysis completed successfully"
   - topic: "{env}.archon-intelligence.intelligence.code-analysis-failed.v1"
     event_type: "CodeAnalysisFailed"
     payload_model: "ModelCodeAnalysisFailedPayload"
-    # TODO: Update to "omniintelligence.events.models" after migration
+    # TODO(#17): Update to "omniintelligence.events.models" after migration
     payload_module: "omniintelligence.nodes.intelligence_adapter.node_intelligence_adapter_effect"
     description: "Code analysis failed"
 # Handler Routing Configuration
@@ -83,7 +87,8 @@ published_events:
 # import failures. When implementing handler-based routing, uncomment and
 # create the handlers/ directory with these modules:
 #
-# TODO(handler-routing): Create handler modules when needed
+# TODO(#18): Create handler modules when needed
+# Issue: https://github.com/OmniNode-ai/omniintelligence/issues/18
 #   - handler_analyze_code.py (HandlerAnalyzeCode)
 #   - handler_assess_quality.py (HandlerAssessQuality)
 #   - handler_detect_patterns.py (HandlerDetectPatterns)
@@ -141,7 +146,8 @@ error_handling:
 # NOTE: External library dependencies (confluent_kafka) are valid.
 # Internal module dependencies are commented out until migrated from _legacy.
 #
-# TODO: Migrate these modules from _legacy to canonical structure:
+# TODO(#19): Migrate these modules from _legacy to canonical structure
+# Issue: https://github.com/OmniNode-ai/omniintelligence/issues/19
 # - omniintelligence.clients.client_intelligence_service (currently in _legacy/clients/)
 # - omniintelligence.events.publisher.event_publisher (currently in _legacy/events/publisher/)
 #
