--- a/src/omniintelligence/nodes/vectorization_compute/contract.yaml
+++ b/src/omniintelligence/nodes/vectorization_compute/contract.yaml
@@ -69,10 +69,10 @@ operations:
 # Current: No external protocol dependencies (uses internal embedding implementation)
 #
 # =============================================================================
-# Future Enhancement: Protocol Integration (ONEX-EMBED-001)
+# TODO(#14): Protocol Integration - EmbeddingModelProtocol
 # =============================================================================
 # Status: Backlog - Phase 3 (v0.4.0)
-# Tracking: https://github.com/OmniNode-ai/omniintelligence/issues/14
+# Issue: https://github.com/OmniNode-ai/omniintelligence/issues/14
 # See also: docs/migrations/omniarchon_to_omniintelligence.md (Phase 3 - Protocols)
 #
 # Priority: Low (current implementation functional without protocol abstraction)
@@ -84,7 +84,7 @@ operations:
 #   - Uncomment dependency below
 # =============================================================================
 dependencies: []
-# Future dependency (when ONEX-EMBED-001 is implemented):
+# Future dependency (when #14 is implemented):
 # - name: "embedding_model"
 #   type: "protocol"
 #   module: "omniintelligence.protocols"
